--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+<header></header>
+<main>
   <app-root></app-root>
+</main>
+<footer></footer>
 </body>
 </html>
